# actix_one

./: .env  Cargo.toml  notes.txt
migrations/2021-12-17-052142_users/: up.sql
src/: main.rs  models.rs  routes.rs  schema.rs  user.rs  utils.rs
src/middelware/: auth.rs
src/models/: success.rs  user.rs
src/routes/: files_routes.rs  user_routes.rs
src/utils/: database.rs  hash.rs  jwtauth.rs
