[package]
name = "actix_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.131"
env_logger = "0.9.0"
serde_json = "1.0.73"
diesel = { version = "1.4.5", features = ["postgres","r2d2","uuidv07","chrono"] }
dotenv = "0.15.0"
uuid =  {version="0.8.2", features=["serde","v4"]}
chrono = "0.4.19"
tracing-bunyan-formatter = "0.3.1"
tracing = "0.1.29"
tracing-log = "0.1.2"
tracing-subscriber = {version= "0.3.3",  features=["env-filter"]}
tracing-actix-web = "0.2.1"
actix-web-opentelemetry = "0.10.0"
pbkdf2 = "0.10.0"
rand_core = { version = "0.6", features = ["std"] }